--- a/src/app/components/HomePage/HomePage.css
+++ b/src/app/components/HomePage/HomePage.css
@@ -1,11 +1,11 @@
 .imageContainer{
     column-count:5;
-    column-gap:0px;  
+    column-gap:0px;
 }
 
 .image{
-    padding: 5px;
-    width: 100% !important;
-    height: auto !important;
+    padding: 1px;
+    width: 100% ;
+    /* height: auto !important;  */
     display: flex;
 }
