--- a/src/app/components/HomePage/HomePage.css
+++ b/src/app/components/HomePage/HomePage.css
@@ -19,11 +19,20 @@
     border-radius: 20px;
 }
 .slideShowImageContainer{
-    /* margin-top:-100px; */
     height: 500px;
     background-image: URL("https://source.unsplash.com/5P91SF0zNsI/740x494");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     filter: blur(8px);
+
+}
+.logoIcon img{
+    width: 100px;
+    z-index: 4;
+    position: fixed;
+    filter: blur(0px);
+    border-radius: 20px;
+    /* margin-top:-100px; */
+    right: 0;
 }
